--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,12 @@ html{
     background: var(--second);
     padding: .2rem .5rem;
 }
+.dirasa i{
+    font-size: 1.5rem;
+    background: var(--second);
+    color: white;
+    padding: .5rem;
+}
 @media only screen and (max-width: 600px){
     .home-down{
         flex-direction: column;
@@ -339,7 +345,7 @@ html{
     .documents h1{
         font-size: 1rem;
     }
-    .dirasa img{
+    .dirasa i{
         padding: .2rem;
     }
 }
